Add template block to base.html

--- a/cocktailcorner/templates/base.html
+++ b/cocktailcorner/templates/base.html
@@ -31,7 +31,10 @@
         </ul>
     </header>
 
-    <main>Hello World ^.^</main>
+    <main class="container">
+        {% block content %}
+        {% endblock %}
+    </main>
 
     <footer></footer>
 
