--- a/cocktailcorner/templates/base.html
+++ b/cocktailcorner/templates/base.html
@@ -38,7 +38,15 @@
         {% endblock %}
     </main>
 
-    <footer></footer>
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col s12">
+                    <h5 class="white-text center-align">Footer Content</h5>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- Import Materialize Javascript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
