--- a/cocktailcorner/templates/register.html
+++ b/cocktailcorner/templates/register.html
@@ -3,4 +3,35 @@
 
 <h3 class="center-align">Create an account here:</h3>
 
+<div class="row card-panel">
+    <form class="col s12">
+        <!-- Username -->
+        <div class="row">
+            <div class="input-field col s12">
+                <input id="username" name="username" type="text" minlength="5" maxlength="25" class="validate" required>
+                <label for="username">Create Username</label>
+            </div>
+        </div>
+        <!-- Password -->
+        <div class="row">
+            <div class="input-field col s12">
+                <input id="password" type="password" minlength="5" maxlength="25" class="validate" required>
+                <label for="password">Create Password</label>
+            </div>
+        </div>
+        <!-- Password Confirmation -->
+        <div class="row">
+            <div class="input-field col s12">
+                <input id="password2" type="password" minlength="5" maxlength="25" class="validate" required>
+                <label for="password2">Confirm Password</label>
+            </div>
+        </div>
+        <!-- Submit -->
+        <div class="row">
+            <div class="col s12 center-align">
+                <button type="submit" class="btn-large">Register</button>
+            </div>
+        </div>
+    </form>
+</div>
 {% endblock %}
