--- a/cocktailcorner/templates/register.html
+++ b/cocktailcorner/templates/register.html
@@ -4,7 +4,7 @@
 <h3 class="center-align">Create an account here:</h3>
 
 <div class="row card-panel">
-    <form class="col s12">
+    <form class="col s12" method="POST" action="{{ url_for('register') }}">
         <!-- Username -->
         <div class="row">
             <div class="input-field col s12">
@@ -15,17 +15,31 @@
         <!-- Password -->
         <div class="row">
             <div class="input-field col s12">
-                <input id="password" type="password" minlength="5" maxlength="25" class="validate" required>
+                <input id="password" name="password" type="password" minlength="5" maxlength="25" class="validate" required>
                 <label for="password">Create Password</label>
             </div>
         </div>
         <!-- Password Confirmation -->
         <div class="row">
             <div class="input-field col s12">
-                <input id="password2" type="password" minlength="5" maxlength="25" class="validate" required>
+                <input id="password2" name="password2" type="password" minlength="5" maxlength="25" class="validate" required>
                 <label for="password2">Confirm Password</label>
             </div>
         </div>
+
+        <section>
+            <!-- Flash Message -->
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            {% for message in messages %}
+            <div class="row flashes">
+                <h4 class="red-text center-align">{{ message }}</h4>
+            </div>
+            {% endfor %}
+            {% endif %}
+            {% endwith %}
+        </section>
+        
         <!-- Submit -->
         <div class="row">
             <div class="col s12 center-align">
