--- a/cocktailcorner/templates/base.html
+++ b/cocktailcorner/templates/base.html
@@ -22,6 +22,7 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('home') }}">Home</a></li>
                     <li><a href="{{ url_for('register') }}">Register</a></li>
+                    <li><a href="{{ url_for('log_in') }}">Log In</a></li>
                 </ul>
             </div>
         </nav>
@@ -30,6 +31,7 @@
         <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="{{ url_for('register') }}">Register</a></li>
+            <li><a href="{{ url_for('log_in') }}">Log In</a></li>
         </ul>
     </header>
 
