--- a/cocktailcorner/templates/base.html
+++ b/cocktailcorner/templates/base.html
@@ -23,6 +23,7 @@
                     <li><a href="{{ url_for('home') }}">Home</a></li>
                     {% if session.current_user %}
                     <li><a href="{{ url_for('account', username=session['current_user']) }}">Account</a></li>
+                    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                     {% else %}
                     <li><a href="{{ url_for('register') }}">Register</a></li>
                     <li><a href="{{ url_for('log_in') }}">Log In</a></li>
