--- a/cocktailcorner/templates/manage_categories.html
+++ b/cocktailcorner/templates/manage_categories.html
@@ -3,4 +3,35 @@
 
 <h3 class="center-align">Category Management</h3>
 
+<div class="row card-panel">
+    <form class="col s12" method="POST" action="{{ url_for('add_category') }}">
+        <!-- Add Category -->
+        <div class="row">
+            <div class="input-field col s12">
+                <input id="category_name" name="category_name" type="text" maxlength="50" class="validate" required>
+                <label for="category_name">Input a category name to add it here: </label>
+            </div>
+        </div>
+        
+        <section>
+            <!-- Flash Message -->
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            {% for message in messages %}
+            <div class="row flashes">
+                <h4 class="red-text center-align">{{ message }}</h4>
+            </div>
+            {% endfor %}
+            {% endif %}
+            {% endwith %}
+        </section>
+        
+        <!-- Submit -->
+        <div class="row">
+            <div class="col s12 center-align">
+                <button type="submit" class="btn-large">Add Category</button>
+            </div>
+        </div>
+    </form>
+</div>
 {% endblock %}
