--- a/cocktailcorner/templates/manage_categories.html
+++ b/cocktailcorner/templates/manage_categories.html
@@ -34,5 +34,16 @@
     </form>
 </div>
 
+<div class="row">
+    {% for category in categories %}
+        <div class="col s3">
+            <div class="card center-align">
+                <div class="card-content">
+                    <span class="card-title">{{ category.category_name }}</span>
+                </div>               
+            </div>
+        </div>
+    {% endfor %}
+</div>
 
 {% endblock %}
