--- a/cocktailcorner/templates/manage_categories.html
+++ b/cocktailcorner/templates/manage_categories.html
@@ -36,14 +36,19 @@
 
 <div class="row">
     {% for category in categories %}
-        <div class="col s3">
-            <div class="card center-align">
-                <div class="card-content">
-                    <span class="card-title">{{ category.category_name }}</span>
-                </div>               
+    <div class="col s3">
+        <div class="card center-align">
+            <div class="card-content">
+                <span class="card-title">{{ category.category_name }}</span>
+            </div>
+            <div class="card-action">
+                <a href="{{ url_for('delete_category', category_id=category.id) }}" class="btn red">Delete</a>
             </div>
         </div>
+    </div>
     {% endfor %}
 </div>
+
+
 
 {% endblock %}
