--- a/cocktailcorner/templates/manage_categories.html
+++ b/cocktailcorner/templates/manage_categories.html
@@ -42,13 +42,12 @@
                 <span class="card-title">{{ category.category_name }}</span>
             </div>
             <div class="card-action">
+                <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn green">Edit</a>
                 <a href="{{ url_for('delete_category', category_id=category.id) }}" class="btn red">Delete</a>
             </div>
         </div>
     </div>
     {% endfor %}
 </div>
-
-
 
 {% endblock %}
