--- a/cocktailcorner/templates/base.html
+++ b/cocktailcorner/templates/base.html
@@ -22,6 +22,7 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('home') }}">Home</a></li>
                     {% if session.current_user %}
+                    <li><a href="{{ url_for('add_cocktail') }}">Add Cocktail</a></li>
                     <li><a href="{{ url_for('account', username=session['current_user']) }}">Account</a></li>
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                         {% if session.current_user == "_owner" %}
